--- a/app/views/diaries/index.html.erb
+++ b/app/views/diaries/index.html.erb
@@ -1,66 +1,52 @@
 <%= notice %>
 <% if @diary.errors.any? %>
 <div id="error_explanation">
-  <h2><%= pluralize(@diary.errors.count, "このエラーで日記を登録できません。") %></h2>
-  <ul>
+  <h2 class="error_explanation__title"><%= pluralize(@diary.errors.count, "このエラーで日記を登録できません。") %></h2>
+  <ul class="error_explanation__message">
     <% @diary.errors.full_messages.each do |message| %>
-    <li><%= message %></li>
+    <li class="error_explanation__message__text"><%= message %></li>
     <% end %>
   </ul>
 </div>
 <% end %>
 
-<div class = "container">
-  <h2>つちっこ成長日記</h2>
-  <div class = "row">
-    <div class = "col-md-8 col-sm-12">
-      <%= form_with model:@diary, url:diaries_path, local:true do |f| %>
-      <table>
-        <tr>
-          <th>写真</th>
-          <td><%= f.attachment_field :image %></td>
-        </tr>
-        <tr>
-          <th>タイトル</th>
-          <td><%= f.text_field :title %></td>
-        </tr>
-        <tr>
-          <th>記録</th>
-          <td><%= f.text_area :text %></td>
-        </tr>
-      </table>
-      <div class = "form">
-        <%= f.submit "登録する", class: "btn btn-outline-warning btn-sm" %>
+<div class="main">
+  <div class="container">
+    <h2>つちっこ成長日記</h2>
+    <div class="main__form row">
+      <div class="main__form__input col-md-8 col-sm-12">
+        <%= form_with model:@diary, url:diaries_path, local:true do |f| %>
+        <table>
+          <tr>
+            <th>写真</th>
+            <td><%= f.attachment_field :image %></td>
+          </tr>
+          <tr>
+            <th>タイトル</th>
+            <td><%= f.text_field :title %></td>
+          </tr>
+          <tr>
+            <th>記録</th>
+            <td><%= f.text_area :text %></td>
+          </tr>
+        </table>
+        <div class="main__form__action">
+          <%= f.submit "登録する", class: "btn btn-outline-warning btn-sm" %>
+        </div>
       </div>
     </div>
-  </div>
-  <% end %>
-  <div class="row">
-    <div class = "col-md-10 col-sm-12 mt-5">
-      <%= month_calendar events: current_user.diaries do |date, diaries| %>
-        <%= date.day %>
-        <% diaries.each do |diary| %>
-      <div>
-        <%= link_to diary.title, diary_path(diary.id) %>
-      </div>
+    <% end %>
+    <div class="main__calendar row">
+      <div class="main__calendar__content col-md-10 col-sm-12 mt-5">
+        <%= month_calendar events: current_user.diaries do |date, diaries| %>
+          <%= date.day %>
+          <% diaries.each do |diary| %>
+        <div class="main__calendar__title">
+           <%= link_to diary.title, diary_path(diary.id) %>
+        </div>
+          <% end %>
         <% end %>
-      <% end %>
-      <!--<table class="table table-bordered">-->
-      <!--  <thead>-->
-      <!--    <tr>-->
-      <!--      <th>タイトル</th>-->
-      <!--      <th>記録</th>-->
-      <!--    </tr>-->
-      <!--  </thead>-->
-      <!--  <tbody>-->
-      <!--    <#% @diaries.each do |diary| %>-->
-      <!--      <tr>-->
-      <!--        <td><%#= diary.title %></td>-->
-      <!--        <td><%#= diary.text %></td>-->
-      <!--      </tr>-->
-      <!--    <#% end %>-->
-      <!--  </tbody>-->
-      <!--</table>-->
+      </div>
     </div>
   </div>
 </div>
